# significantdigits

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compute_sig.py  cramer.npy  cramer.py  float_struct.h  pyproject.toml  pytest.ini  requirements.txt  setup.py  sigdigits.py
.github/workflows/: docs.yml  python-app.yml
data/: cramer-x0-10000.txt  cramer-x1-10000.txt
examples/: Intervals.ipynb  cramer.py  getting_started.py  test.ipynb  uniform.py
pdoc/template/: math.html.jinja2
significantdigits/: __init__.py  __main__.py  _significantdigits.py  args.py  conftest.py  pyproject.toml  sigdigits.py
significantdigits/export/: __init__.py  generic.py  numpy.py  stdin.py
significantdigits/io/: __main__.py  numpy.py  stdin.py
significantdigits/scripts/: significantdigits
significantdigits/src/: Makefile  float_const.h  truncation.c  truncation.py
significantdigits/stats/: __init__.py  dense.py
significantdigits/test/: test_args.py  test_compute_z.py  test_cramer.py  test_higham.py  test_parker.py  test_scalar.py  utils.py
src/significantdigits/: __init__.py  __main__.py  _significantdigits.py  args.py
src/significantdigits/export/: __init__.py  generic.py  stdin.py
src/significantdigits/stats/: __init__.py  dense.py  dispatch.py  gpu.py  sparse.py
tests/: conftest.py  test_cramer.py  test_edge_cases.py  test_gpu.py  test_higham.py  test_integration.py  test_performance.py  test_print_digits.py  test_property_based.py  test_scalar.py  test_scaling_factor.py  test_validation.py  utils.py
