[build-system]
requires = ["hatchling", "pathspec"]
build-backend = "hatchling.build"

[project]
name = "significantdigits"
version = "0.1.3"
description = "Solid stochastic statistic analysis of Stochastic Arithmetic"
authors = [
    { name = "Verificarlo contributors", email = "verificarlo@googlegroups.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Development Status :: 4 - Beta",
]
license = { file = "LICENSE" }
dependencies = [
    "attrs>=21.2.0",
    "iniconfig>=1.1.1",
    "numpy>=1.22.0",
    "packaging>=21.2",
    "pluggy>=1.0.0",
    "py>=1.10.0",
    "pyparsing>=2.4.7",
    "pytest>=6.2.5",
    "scipy>=1.7.3",
    "toml>=0.10.2",
    "icecream>=2.1.3",
]

[tool.hatch.build]
exclude = ['.github']

[project.scripts]
significantdigits = "significantdigits.__main__:main"


[project.urls]
"Bug Tracker" = "https://github.com/verificarlo/significantdigits/issues"
